--- a/Binary Tree/.vscode/settings.json
+++ b/Binary Tree/.vscode/settings.json
@@ -4,6 +4,7 @@
     "ostream": "cpp",
     "cmath": "cpp",
     "complex": "cpp",
-    "cstdlib": "cpp"
+    "cstdlib": "cpp",
+    "functional": "cpp"
   }
 }
